# opm-adjoint

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_files.cmake  README.md  STATUS.md  adjoint_plan.md  adjoint_refactoring.md  adjoint_status.md  adjoint_testing.md  dune.module  opm-adjoint-prereqs.cmake
examples/: flow_adjoint.cpp
jutul/: Manifest.toml  OPMAdjointJutul.jl  README.md  compare_spe1_pv.jl  run-gradient-comparison.sh
opm/adjoint/: AdjointDeckWarnings.hpp  AdjointEndpointGradients.hpp  AdjointFlowProblem.hpp  AdjointLinearSolver.hpp  AdjointMeta.hpp  AdjointObjective.hpp  AdjointParallel.hpp  AdjointParameters.cpp  AdjointParameters.hpp  AdjointRecorder.hpp  AdjointReplay.hpp  AdjointSolver.hpp  AdjointStorage.hpp  AdjointSystemIO.hpp  AdjointWellModel.hpp  transposeMatrix.hpp
tests/: run-adjoint-fd-ctrl-test.sh  run-adjoint-fd-endpoint-test.sh  run-adjoint-fd-grpctrl-test.sh  run-adjoint-fd-perm-test.sh  run-adjoint-fd-test.sh  run-adjoint-fd-trans-test.sh  run-adjoint-gradient-regression.sh  run-adjoint-matchref-test.sh  run-adjoint-mpi-test.sh  run-adjoint-replay-test.sh  run-adjoint-solver-test.sh  run-jutul-forward-compare.sh  run-storage-cache-equivalence.sh  test_AdjointStorage.cpp  test_transposeMatrix.cpp
tests/references/: bhp_prod_PERM.txt  bhp_prod_PV.txt  bhp_prod_TRANS.txt  pressure_pv_trans_PERM.txt  pressure_pv_trans_PV.txt  pressure_pv_trans_TRANS.txt  rate_oil_PERM.txt  rate_oil_PV.txt  rate_oil_TRANS.txt
